# product-demand-forecasting

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tune.yml
app/api/: auth.py  main.py  rate_limit.py  schemas.py
app/streamlit/: __init__.py  auth.py  main.py
configs/: config.yaml
configs/features/: v2.yaml
configs/tuning/: random_forest.yaml
extras/docs/archive/: Forecast.ipynb
extras/notebooks/: eda.ipynb
infra/: Dockerfile
scripts/: check_prediction_drift.py  download_models.sh  export_onnx.py  filter_cursor_author.py  filter_cursor_coauthor.py  filter_cursor_email.py  run_filter_cursor_history.py  upload_artifacts.py  verify_model_baseline.py
src/: pipeline.py
src/api/: __init__.py  main.py
src/config/: loader.py  settings.py
src/data/: __init__.py  cleaning.py  loader.py  schema.py  validation.py
src/features/: config.py  engineering.py
src/models/: __init__.py  metrics.py  predict.py  registry.py  train.py
src/pipelines/: cli.py  runner.py
src/ui/: streamlit_shim.py
src/utils/: logging.py
tests/: test_api.py  test_features.py  test_metrics.py  test_model_registry.py  test_no_leakage.py  test_pipeline_e2e.py  test_predict.py  test_registry.py  test_schema.py  test_streamlit_auth.py
tests/fixtures/: sample_data.csv
